@@ -46,7 +46,7 @@ top::TopObjectSelection* ttHMultileptonLooseObjectLoader::init(std::shared_ptr<t
     exit(1);
   }
   
-  objectSelection->muonSelection(new top::MuonDC14(5000., 2.5, nullptr)); //new top::ApproxPTVarCone(0.05, 0.)));
+  objectSelection->muonSelection(new top::MuonDC14(5000., 2.7, nullptr)); //new top::ApproxPTVarCone(0.05, 0.)));
   objectSelection->jetSelection(new top::JetDC14(10000., 10.5, 0.));
   objectSelection->tauSelection(new top::TauDC14(10000., false, TauAnalysisTools::JETID::JETIDNONE, TauAnalysisTools::JETID::JETIDNONE, TauAnalysisTools::ELEID::ELEIDBDTTIGHT));
   
